api/k8s_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: api
  name: api
spec:
  replicas: 1
  selector:
    matchLabels:
      name: api
  template:
    metadata:
      labels:
        name: api
    spec:
      containers:
      - image: cr.yandex/crpurmch681deghm39te/api:v1.0
        name: api
        ports:
        - containerPort: 5000
