api/load_balancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello
spec:
  ports:
  - port: 80
    name: plaintext
    targetPort: 5000
  selector:
    app: api
  loadBalancerIP: 84.201.165.43
  type: LoadBalancer
